<resources>
    <string name="test">Test</string>

    <!--Bottom Nav-->
    <string name="nav_home">Beranda</string>
    <string name="nav_profile">Profil</string>
    <string name="title_article">Tittle nya</string>
    <string name="nav_land">Monitoring Lahan</string>
    <string name="nav_worker">Monitoring Pekerja</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string name="welcome_register_title">Belum punya akun</string>
    <string name="welcome_register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_name_app">Lineupkita App dev</string>
    <string name="login_forgot_password">Lupa password</string>
    <string name="login_login">Login</string>
    <string name="login_password_hint">Masukan password</string>
    <string name="login_username_hint">Masukan username</string>
    <string name="add_worker">Tambah pekerja</string>
    <string name="title_coordinate">Koordinat</string>
    <string name="lattitude">Lattitude :</string>
    <string name="title_logitude">Logitude :</string>
    <string name="login_photo">Ambil photo pohon</string>
    <string name="title_accurate">Akurasi</string>
    <string name="kode_plot">Kode plot</string>
    <string name="pola_tanam">Pola tanam</string>
    <string name="name_worker">Nama pekerja</string>
    <string name="login_comodity_hint">Masukan Komoditas</string>
    <string name="comodity">Komoditas</string>
    <string name="work_hint">Pilih pekerjaan</string>
    <string name="work">Pekerjaan</string>
    <string name="volume_work_hint">Isi Volume kerjaan</string>
    <string name="satuan_hint">0</string>
    <string name="satuan">Satuan</string>
    <string name="volume_work">Volume pekerjaan</string>
    <string name="work_activities">Kegiatan kerjaan</string>
    <string name="work_activities_hint">Kegiatan kerjaan</string>
    <string name="cancelled">Batal</string>
    <string name="save">Simpan</string>
    <string name="choose_name_worker">Pilih nama pekerja</string>
    <string name="kode_plot_hint">Kode plot</string>
    <string name="pola_tanam_hint">Pola tanam</string>
    <string name="welcome_login_app">Welcome</string>
    <string name="firtsname">Nama awal</string>
    <string name="lastname">Nama akhir</string>
    <string name="login_firstname_hint">Masukan nama awal</string>
    <string name="login_lastname_hint">"Masukan nama akhir "</string>
    <string name="email">Email</string>
    <string name="email_hint">Masukan email</string>
    <string name="password_confirm">Konfirmasi password</string>
    <string name="confirm_password_hint">Masukan konfirmasi password</string>
    <string name="register">Daftar</string>
    <string name="search_festival_hint">Cari festival</string>
    <string name="festival_foryou">Festival untukmu</string>
    <string name="date_festival">28 - 30 Aagustus 2023</string>
    <string name="nav_ticket">Tiket</string>
    <string name="nav_chat">Cari partner</string>
    <string name="description">Deskripsi</string>
    <string name="lineup">Lineup</string>
    <string name="profile">Profile</string>
    <string name="whislist">Whislist konser</string>
    <string name="artist_fav">Artis Favorit</string>

</resources>