<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/nav_home"
        android:contentDescription="@string/nav_home"
        android:icon="@drawable/round_home"/>

    <item
        android:id="@+id/tiket"
        android:title="@string/nav_ticket"
        android:contentDescription="@string/nav_ticket"
        android:icon="@drawable/baseline_sticky_note" />

    <item
        android:id="@+id/chat"
        android:title="@string/nav_chat"
        android:contentDescription="@string/nav_chat"
        android:icon="@drawable/round_mark_unread_chat" />


    <item
        android:id="@+id/profile"
        android:title="@string/nav_profile"
        android:contentDescription="@string/nav_profile"
        android:icon="@drawable/round_person" />

</menu>