<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <com.google.android.material.appbar.AppBarLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="@string/nav_home"
                android:layout_marginStart="@dimen/screen_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/notif"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/zero_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/baseline_notifications_24"
            android:layout_marginEnd="@dimen/screen_margin"/>
<!--        </com.google.android.material.appbar.AppBarLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxSearch"
        style="@style/TextInputLayout.Login.Form.Outlined.Dense"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        app:boxBackgroundColor="@color/oxford_blue"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@drawable/bg_input_text"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:startIconDrawable="@drawable/round_search"
        app:startIconTint="@color/dove_gray"
        app:boxStrokeWidthFocused="1dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolbars"
        app:placeholderText="@string/search_festival_hint"
        app:placeholderTextAppearance="@style/TextAppearance.OpenSans.Regular.Body2"
        app:placeholderTextColor="@color/dove_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="255"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.OpenSans.Regular.Body2"
            android:textColor="@color/dove_gray"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/screen_margin"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxSearch" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleFestival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvFilter"
        android:text="@string/festival_foryou"
        android:textAppearance="@style/TextAppearance.OpenSans.SemiBold.Headline6"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:textColor="@color/white"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/screen_margin"
        app:layout_constraintTop_toTopOf="@+id/tvTitleFestival"
        android:text="@string/festival_foryou"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleFestival"
        android:layout_marginStart="@dimen/screen_margin"
        android:textColor="@color/dove_gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFestival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/screen_margin"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleFestival" />

</androidx.constraintlayout.widget.ConstraintLayout>