<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivFest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_margin"
                android:src="@drawable/img_fest"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:src="@drawable/ic_baseline_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/notif"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/zero_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/heart_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitlenameFestival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="Indie fest 2023"
                android:textAppearance="@style/TextAppearance.OpenSans.Bold.Headline6"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/tvTime"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:text="08:00 - 16:00"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tvDate"
                app:layout_constraintStart_toEndOf="@+id/tvDate"
                app:layout_constraintTop_toTopOf="@+id/tvDate" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="@string/date_festival"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/ivFest"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.OpenSans.Bold.Headline6"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivFest" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDescriptionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English."
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLineup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="@string/lineup"
                android:textAppearance="@style/TextAppearance.OpenSans.Bold.Headline6"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionContent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLineup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLineup" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="@string/lineup"
                android:textAppearance="@style/TextAppearance.OpenSans.Bold.Headline6"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvLineup" />

<!--            <fragment-->
<!--                android:id="@+id/fLocation"-->
<!--                android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--                android:layout_width="@dimen/zero_margin"-->
<!--                android:layout_height="@dimen/zero_margin"-->
<!--                android:layout_marginStart="@dimen/screen_margin"-->
<!--                android:layout_marginTop="@dimen/screen_margin"-->
<!--                android:layout_marginEnd="@dimen/screen_margin"-->
<!--                app:layout_constraintDimensionRatio="2:1"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/tvLocation" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>